[package]
name = "airbox"
version = "0.1.0"
authors = ["Kaiser Jean-Baptiste <kaiserjean@eisti.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
roxmltree = "0.13.0"
